# global-mq-marshalling

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
generator/: CMakeLists.txt
generator/idl/: global_mq_IDL.l  global_mq_IDL.tab.cpp  global_mq_IDL.tab.h  global_mq_IDL.y  lex.yy.cpp
generator/include/: common.h  global_mq_parser_helper.h
generator/src/: global_mq_parser_helper.cpp  idl_tree_serializer.cpp  main.cpp
idl_compiler/: CMakeLists.txt
idl_compiler/grammar/: generate.bat  global_mq_IDL.l  global_mq_IDL.y
idl_compiler/idl/: global_mq_IDL.l  global_mq_IDL.tab.cpp  global_mq_IDL.tab.h  global_mq_IDL.y  global_mq_grammar.bat  lex.yy.cpp
idl_compiler/idlc/: build_generated.bat
idl_compiler/include/: common.h  cplusplus_idl_tree_serializer.h  file_writter.h  global_mq_parser_helper.h  idl_generators.h  idl_parser.h  idl_tree.h  idl_tree_2_csharp.h  idl_tree_common.h  idl_tree_serializer.h  lex.h  parser.h  raiistdiofile.h
idl_compiler/src/: file_writter.cpp  global-mq-sample.idl  global_mq_parser_helper.cpp  idl_tree_2_csharp.cpp  idl_tree_2_csharp_messages.cpp  idl_tree_2_csharp_publishables.cpp  idl_tree_2_csharp_structs.cpp  idl_tree_2_csharp_unions.cpp  idl_tree_common.cpp  idl_tree_serializer.cpp  idl_tree_serializer_messages.cpp  idl_tree_serializer_publishables.cpp  idl_tree_serializer_publishables_print_tree.cpp  main.cpp
idl_compiler/src/cplusplus/: cplusplus_idl_tree_serializer.cpp  cplusplus_messages.cpp  cplusplus_publishables.cpp  cplusplus_publishables_print_tree.cpp  idl_tree_serializer.cpp  idl_tree_serializer_messages.cpp  idl_tree_serializer_publishables.cpp  idl_tree_serializer_publishables_print_tree.cpp
idl_compiler/src/csharp/: idl_tree_2_csharp.cpp  idl_tree_2_csharp.h  idl_tree_2_csharp_messages.cpp  idl_tree_2_csharp_publishables.cpp  idl_tree_2_csharp_structs.cpp  idl_tree_2_csharp_unions.cpp
idl_compiler/src/csharp2/: csharp2.cpp  csharp2.h  csharp2_messages.cpp  csharp2_publishables.cpp  csharp2_structs.cpp  csharp2_unions.cpp  idl_tree_2_csharp.cpp  idl_tree_2_csharp_messages.cpp  idl_tree_2_csharp_publishables.cpp  idl_tree_2_csharp_structs.cpp  idl_tree_2_csharp_unions.cpp
test/: CMakeLists.txt  global-mq-sample.idl  main.cpp  nodecpp_publish_subscribe_support.h  test_marshalling.cpp  test_marshalling.idl  test_subsciption.cpp  test_subscription.cpp  tests.h
test/cpp/: CMakeLists.txt  comparsers-test.h  main.cpp  nodecpp_gmqueue_customized_types.h  nodecpp_publish_subscribe_support.h  sample_json.txt  test_marshalling.cpp  test_marshalling.idl  test_subscription.cpp  tests.h
test/cpp/marshalling/: test_marshalling.h
test/cs/: CMakeLists.txt  IdlGenerated.cs  TestCommon.cs  TestMessage.cs  TestMessageDu.cs  TestMessageStruct.cs  TestMessageThree.cs  TestMessageTwo.cs  TestPublishableStructSix.cs  TestStructOne.cs  TestUnitBuffer.cs  TestUnitEncoding.cs  TestUnitGmQueue.cs  TestUnitGmqIntegralEncoding.cs  TestUnitGmqPathHelper.cs  TestUnitJsonParser.cs  publishable_six_test.cs  publishable_six_update1.json  struct_du_1.gmq  struct_du_2.gmq  test.csproj  test_gmqueue.cs  test_gmqueue1_2.json  test_gmqueue2_2.json  test_gmqueue2_3.json  test_gmqueue2_5.json  test_marshalling.h  test_marshalling.idl  test_marshalling2.h  test_marshalling2.idl  test_message_three.cs  test_message_two.cs  test_message_two.gmq  test_publishable_seven.cs  test_publishable_seven.gmq  test_publishable_seven.json  test_publishable_seven_notify.cs  test_publishable_seven_u1.gmq  test_publishable_seven_u2.gmq  test_publishable_seven_u2.json  (+14 more)
test/cs/coveragereport/: Summary.md  coverage.txt
test/cs/cpp/: CMakeLists.txt  idl_generated.h  main.cpp  test_gmqueue.cpp  test_idl_common.h  test_message_three.cpp  test_message_two.cpp  test_publishable_seven.cpp  test_publishable_six.cpp  test_publishable_six2.cpp  test_struct_one.cpp  test_struct_one.h
test/csharp-2-cpp/: CMakeLists.txt  cpp_message.cpp  csharp-2-cpp.csproj  csharp_message.cs  gen_message_one.cs  gen_message_one.h  message_one.idl
test/csharp-2-cpp/Properties/: AssemblyInfo.cs
test/interop/: interop.md
test/interop/common/include/: test_common.h
test/interop/csharp-only/: CMakeLists.txt
test/interop/csharp-only/cs/: generated_interop2.cs  test_simple.cs  test_struct_du.cs
test/interop/interop1/: CMakeLists.txt
test/interop/interop1/data/: test_gmqueue3_1.json  test_gmqueue3_3.json  test_message_three.json  test_message_two.gmq  test_publishable_seven_u1.gmq  test_publishable_seven_u1.json  test_publishable_seven_u3.json  test_publishable_seven_u4.json  test_publishable_six.json  test_publishable_six2.gmq  test_publishable_six2_update1.gmq  test_publishable_six2_update2.gmq  test_publishable_six_update2.json  test_struct_one.gmq
test/interop/interop1/test-interop1-cplusplus/: CMakeLists.txt  idl_generated.h  main.cpp  test_common.h  test_common2.h  test_gmqueue.cpp  test_message_three.cpp  test_message_two.cpp  test_publishable_seven.cpp  test_publishable_six.cpp  test_publishable_six2.cpp  test_struct_one.cpp
test/interop/interop1/test-interop1-cplusplus-templates/: CMakeLists.txt
test/interop/interop2/: CMakeLists.txt  interop2.idl
test/interop/interop2-todo/: CMakeLists.txt  interop2.idl  test_struct_du.cs
test/interop/interop3/: CMakeLists.txt
test/interop/interop4/: CMakeLists.txt  interop4.idl
test/interop2/: CMakeLists.txt  interop2.idl  interop2.sln
test/interop2/cpp/: test_common.h  test_publishable_dunion.cpp  test_simple.cpp
test/interop2/cs/: TestCommon.cs  test-interop2-csharp.csproj  test_publishable_dunion.cs  test_simple.cs
test/interop2/interop-buffer-dotnet/: AssemblyInfo.cpp  app.aps  interop-buffer-dotnet.cpp  interop-buffer-dotnet.h  interop-buffer-dotnet.vcxproj
test/interop2/test-cpp-dll/: CMakeLists.txt  dllmain.cpp  dllmain.h
test/interop2/test-csharp-exe/: Program.cs  test-csharp-exe.csproj
test/marshalling/: test_marshalling.h
test/message/: CMakeLists.txt  cpp_message.cpp  csharp-message.csproj  csharp_message.cs  gen_message_one.cs  gen_message_one.h  message_one.json
tools/: build.sh  (+5 more)
(+180 files in other folders)
